// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should not render password auth if defaultHidden is true 1`] = `
<body>
  <div>
    <div
      data-testid="AUTH_PAGE_ID"
    >
      <div
        style="max-width: 350px;"
      />
    </div>
  </div>
</body>
`;

exports[`should render Google auth 1`] = `
<body>
  <div>
    <div
      data-testid="AUTH_PAGE_ID"
    >
      <div
        style="max-width: 350px;"
      />
      <div
        class="makeStyles-flexColumn-80 makeStyles-contentSpacingY-72"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          data-loading="true"
          data-testid="SSO_LOGIN_BUTTON-google"
          href="/auth/google/login"
          style="height: 40px; color: rgb(0, 0, 0);"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <div
                style="height: 35px; width: 35px;"
              />
            </span>
            ...
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render OIDC auth 1`] = `
<body>
  <div>
    <div
      data-testid="AUTH_PAGE_ID"
    >
      <div
        style="max-width: 350px;"
      />
      <div
        class="makeStyles-flexColumn-108 makeStyles-contentSpacingY-100"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          data-loading="true"
          data-testid="SSO_LOGIN_BUTTON-oidc"
          href="/auth/oidc/login"
          style="height: 40px; color: rgb(0, 0, 0);"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="height: 25px; width: 25px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zM9 8V6c0-1.66 1.34-3 3-3s3 1.34 3 3v2H9z"
                />
              </svg>
            </span>
            ...
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render SAML auth 1`] = `
<body>
  <div>
    <div
      data-testid="AUTH_PAGE_ID"
    >
      <div
        style="max-width: 350px;"
      />
      <div
        class="makeStyles-flexColumn-136 makeStyles-contentSpacingY-128"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root MuiButton-outlined MuiButton-outlinedPrimary MuiButton-outlinedSizeSmall MuiButton-sizeSmall"
          data-loading="true"
          data-testid="SSO_LOGIN_BUTTON-saml"
          href="/auth/saml/login"
          style="height: 40px; color: rgb(0, 0, 0);"
          tabindex="0"
        >
          <span
            class="MuiButton-label"
          >
            <span
              class="MuiButton-startIcon MuiButton-iconSizeSmall"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root"
                focusable="false"
                style="height: 25px; width: 25px;"
                viewBox="0 0 24 24"
              >
                <path
                  d="M18 8h-1V6c0-2.76-2.24-5-5-5S7 3.24 7 6v2H6c-1.1 0-2 .9-2 2v10c0 1.1.9 2 2 2h12c1.1 0 2-.9 2-2V10c0-1.1-.9-2-2-2zm-6 9c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zM9 8V6c0-1.66 1.34-3 3-3s3 1.34 3 3v2H9z"
                />
              </svg>
            </span>
            ...
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</body>
`;

exports[`should render demo auth 1`] = `
<body>
  <div>
    <div
      data-testid="AUTH_PAGE_ID"
    >
      <div
        style="max-width: 350px;"
      />
      <form>
        <div
          class="logo"
        />
        <div
          class="container"
        >
          <h2>
            Access the Unleash demo instance
          </h2>
          <p>
            No further data or Credit Card required
          </p>
          <div
            class="form"
          >
            <div
              class="MuiFormControl-root MuiTextField-root emailField"
              data-testid="LOGIN_EMAIL_ID"
            >
              <label
                class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined Mui-required Mui-required"
                data-shrink="false"
              >
                Email
                <span
                  aria-hidden="true"
                  class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
                >
                   
                  *
                </span>
              </label>
              <div
                class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
              >
                <input
                  aria-invalid="false"
                  class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                  data-testid="email-input-field"
                  name="email"
                  required=""
                  type="email"
                  value=""
                />
                <fieldset
                  aria-hidden="true"
                  class="PrivateNotchedOutline-root-64 MuiOutlinedInput-notchedOutline"
                >
                  <legend
                    class="PrivateNotchedOutline-legendLabelled-66"
                  >
                    <span>
                      Email
                       *
                    </span>
                  </legend>
                </fieldset>
              </div>
            </div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained button MuiButton-containedPrimary"
              data-testid="LOGIN_BUTTON"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label"
              >
                Sign in
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <p>
            By accessing our demo instance, you agree to the Unleash 
            <a
              href="https://www.unleash-hosted.com/tos/"
              rel="noreferrer"
              target="_blank"
            >
              Customer Terms of Service
            </a>
             
            and 
            <a
              href="https://www.unleash-hosted.com/privacy-policy/"
              rel="noreferrer"
              target="_blank"
            >
              Privacy Policy
            </a>
          </p>
        </div>
      </form>
    </div>
  </div>
</body>
`;

exports[`should render email auth 1`] = `
<body>
  <div>
    <div
      data-testid="AUTH_PAGE_ID"
    >
      <div
        style="max-width: 350px;"
      />
      <form>
        <div
          class="container"
        >
          <p>
            You must sign in in order to use Unleash
          </p>
          <p>
            This instance of Unleash is not set up with a secure authentication provider. You can read more about
             
            <a
              href="https://github.com/Unleash/unleash/blob/master/docs/securing-unleash.md"
              rel="noreferrer"
              target="_blank"
            >
              securing Unleash on GitHub
            </a>
          </p>
          <div
            class="MuiFormControl-root MuiTextField-root"
            data-testid="LOGIN_EMAIL_ID"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined Mui-required Mui-required"
              data-shrink="false"
            >
              Email
              <span
                aria-hidden="true"
                class="MuiFormLabel-asterisk MuiInputLabel-asterisk"
              >
                 
                *
              </span>
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
            >
              <input
                aria-invalid="false"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                data-testid="email-input-field"
                name="email"
                required=""
                type="email"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-68 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-70"
                >
                  <span>
                    Email
                     *
                  </span>
                </legend>
              </fieldset>
            </div>
          </div>
          <br />
          <div>
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-contained button MuiButton-containedPrimary"
              data-testid="LOGIN_BUTTON"
              tabindex="0"
              type="submit"
            >
              <span
                class="MuiButton-label"
              >
                Sign in
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
        </div>
      </form>
    </div>
  </div>
</body>
`;

exports[`should render password auth 1`] = `
<body>
  <div>
    <div
      data-testid="AUTH_PAGE_ID"
    >
      <div
        style="max-width: 350px;"
      />
      <form>
        <div
          class="makeStyles-contentContainer-27 makeStyles-contentSpacingY-1"
        >
          <div
            class="MuiFormControl-root MuiTextField-root"
            data-testid="LOGIN_EMAIL_ID"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
              data-shrink="false"
            >
              Username or email
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-marginDense MuiOutlinedInput-marginDense"
            >
              <input
                aria-invalid="false"
                autocomplete="true"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                name="username"
                type="string"
                value=""
              />
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-29 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-31"
                >
                  <span>
                    Username or email
                  </span>
                </legend>
              </fieldset>
            </div>
            
          </div>
          <div
            class="MuiFormControl-root MuiTextField-root"
            data-testid="LOGIN_PASSWORD_ID"
          >
            <label
              class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-marginDense MuiInputLabel-outlined"
              data-shrink="false"
            >
              Password
            </label>
            <div
              class="MuiInputBase-root MuiOutlinedInput-root MuiInputBase-formControl MuiInputBase-adornedEnd MuiOutlinedInput-adornedEnd MuiInputBase-marginDense MuiOutlinedInput-marginDense"
              style="padding-right: 0px;"
            >
              <input
                aria-invalid="false"
                autocomplete="true"
                class="MuiInputBase-input MuiOutlinedInput-input MuiInputBase-inputAdornedEnd MuiOutlinedInput-inputAdornedEnd MuiInputBase-inputMarginDense MuiOutlinedInput-inputMarginDense"
                name="password"
                type="password"
                value=""
              />
              <div
                class="MuiInputAdornment-root MuiInputAdornment-positionEnd MuiInputAdornment-marginDense"
              >
                <button
                  aria-label="toggle password visibility"
                  class="MuiButtonBase-root MuiIconButton-root"
                  tabindex="0"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      aria-hidden="true"
                      class="MuiSvgIcon-root"
                      focusable="false"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M12 7c2.76 0 5 2.24 5 5 0 .65-.13 1.26-.36 1.83l2.92 2.92c1.51-1.26 2.7-2.89 3.43-4.75-1.73-4.39-6-7.5-11-7.5-1.4 0-2.74.25-3.98.7l2.16 2.16C10.74 7.13 11.35 7 12 7zM2 4.27l2.28 2.28.46.46C3.08 8.3 1.78 10.02 1 12c1.73 4.39 6 7.5 11 7.5 1.55 0 3.03-.3 4.38-.84l.42.42L19.73 22 21 20.73 3.27 3 2 4.27zM7.53 9.8l1.55 1.55c-.05.21-.08.43-.08.65 0 1.66 1.34 3 3 3 .22 0 .44-.03.65-.08l1.55 1.55c-.67.33-1.41.53-2.2.53-2.76 0-5-2.24-5-5 0-.79.2-1.53.53-2.2zm4.31-.78l3.15 3.15.02-.16c0-1.66-1.34-3-3-3l-.17.01z"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
              <fieldset
                aria-hidden="true"
                class="PrivateNotchedOutline-root-29 MuiOutlinedInput-notchedOutline"
              >
                <legend
                  class="PrivateNotchedOutline-legendLabelled-31"
                >
                  <span>
                    Password
                  </span>
                </legend>
              </fieldset>
            </div>
            
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
            data-testid="LOGIN_BUTTON"
            style="width: 150px; margin: 1rem auto;"
            tabindex="0"
            type="submit"
          >
            <span
              class="MuiButton-label"
            >
              Sign in
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </form>
      <div
        class="makeStyles-container-33"
      >
        <a
          class="makeStyles-link-34"
          href="/forgotten-password"
        >
          <p
            class="MuiTypography-root makeStyles-text-35 MuiTypography-body2"
          >
            Forgot password?
          </p>
        </a>
        <p
          class="MuiTypography-root MuiTypography-body2"
        >
          Don't have an account?
           
          <a
            class="makeStyles-link-34"
            href="https://www.getunleash.io/plans"
            rel="noopener noreferrer"
            target="_blank"
          >
            Sign up
          </a>
        </p>
      </div>
    </div>
  </div>
</body>
`;
